
add_executable(
        SP24-SE-CSCI-C455-Xavbeat03-Homework-Assignment-4
        main.cpp
        MaxHeap/MaxHeap.cpp
        MaxHeap/MaxHeap.h
        PriorityQueue/PriorityQueue.cpp
        PriorityQueue/PriorityQueue.h
        AirportRecord/AirportRecord.cpp
        AirportRecord/AirportRecord.h
)